Moved dirTerminalType directive logic from compile to link phase. Disambiguated its caret class name and added -moz and -o animation variants.

--- a/src/directives/terminalType/dirTerminalType.css
+++ b/src/directives/terminalType/dirTerminalType.css
@@ -2,17 +2,19 @@
  * This styling is for the flashing caret.
  */
 
-.caret {
+.dirTerminalType-caret {
   display: inline-block;
   width: 3px;
   margin-bottom: -2px;
   margin-left: 3px;
   margin-right: -4px;
   height: 16px;
-  -webkit-animation: blink 0.8s infinite;
-          animation: blink 0.8s infinite;
+  -webkit-animation: dirTerminalType-blink 0.8s infinite;
+     -moz-animation: dirTerminalType-blink 0.8s infinite;
+       -o-animation: dirTerminalType-blink 0.8s infinite;
+          animation: dirTerminalType-blink 0.8s infinite;
 }
-@-webkit-keyframes blink {
+@-webkit-keyframes dirTerminalType-blink {
   0% {
     opacity: 0;
   }
@@ -26,7 +28,35 @@
     opacity: 1;
   }
 }
-@keyframes blink {
+@-moz-keyframes dirTerminalType-blink {
+  0% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-o-keyframes dirTerminalType-blink {
+  0% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes dirTerminalType-blink {
   0% {
     opacity: 0;
   }
